--- a/Wix Test - BI Developer  - Daniel Levkovitz.ipynb
+++ b/Wix Test - BI Developer  - Daniel Levkovitz.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4129e8da",
+   "id": "9def3397",
    "metadata": {},
    "source": [
     "# Wix Test - BI Developer  - Daniel Levkovitz"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b5fccfb2",
+   "id": "22a117ae",
    "metadata": {},
    "source": [
     "### Import Packages"
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d8ccbfd2",
+   "id": "4fb8f450",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,13 +28,12 @@
     "import numpy as np\n",
     "import requests\n",
     "import sqlalchemy\n",
-    "import json\n",
-    "import csv"
+    "import json"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "9bc7bb58",
+   "id": "c1bb8c4d",
    "metadata": {},
    "source": [
     "### Import Credentials for MySQL"
@@ -42,7 +41,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef1f5319",
+   "id": "18e93796",
    "metadata": {},
    "source": [
     "I stored the connection details in a separate file as described in the test."
@@ -51,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "77985534",
+   "id": "fa75d200",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "d4d7ceda",
+   "id": "85d158f5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +69,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9dee2b5a",
+   "id": "8d5a6da1",
    "metadata": {},
    "source": [
     "### Log In to the Database"
@@ -78,8 +77,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "970df757",
+   "execution_count": 40,
+   "id": "4c724378",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,8 +87,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "d5ac2d01",
+   "execution_count": 41,
+   "id": "4797d284",
    "metadata": {
     "scrolled": true
    },
@@ -100,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "327c4323",
+   "id": "d08517dc",
    "metadata": {},
    "source": [
     "### Import Data from https://randomuser.me/"
@@ -109,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "fea6010b",
+   "id": "21d41ee9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "976d0096",
+   "id": "128bf315",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +127,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f2f3710",
+   "id": "bad67725",
    "metadata": {},
    "source": [
     "### Requirement 1 - Create dataset of 4500 users"
@@ -137,7 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "5144c589",
+   "id": "ca79db86",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +145,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6a7b1b0",
+   "id": "c287db71",
    "metadata": {},
    "source": [
     "### Requirement 2 - Separate the dataset into 2 gender datasets (male and female)"
@@ -155,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "db9a4770",
+   "id": "1f0b0788",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +164,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc0caa04",
+   "id": "d30f143f",
    "metadata": {},
    "source": [
     "#### Store each one of the datasets in a separated MySQL table"
@@ -174,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "3c042592",
+   "id": "9174d401",
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "d645899f",
+   "id": "c3b02670",
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +214,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f50bfdb6",
+   "id": "2ac35ac5",
    "metadata": {},
    "source": [
     "### Requirement 3 - Split the dataset into 10 subsets by dob.age column in groups of 10"
@@ -224,7 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "33ec1e74",
+   "id": "3b80421f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +235,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "e1dc722f",
+   "id": "12d7ed05",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +246,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c85a2407",
+   "id": "5ff3ccb0",
    "metadata": {},
    "source": [
     "### Requirement 4 - Store each one of the subsets in MySQL"
@@ -256,7 +255,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "3802986c",
+   "id": "41b0c256",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +265,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb7abe1e",
+   "id": "e9329be7",
    "metadata": {},
    "source": [
     "### Requirement 5 - Write a SQL query that will return the top 20 last registered males and females from each one of the gender tables you created in 2 and save it in MySQL"
@@ -275,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "f5078406",
+   "id": "1457cabc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "13a1df0e",
+   "id": "aa1d25a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +294,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "2b6a9e38",
+   "id": "f31b749d",
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +314,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5388fe4",
+   "id": "175b3e7a",
    "metadata": {},
    "source": [
     "### Requirement 6 - Create a dataset that combines data from DANIEL_LEVKOVITZ__test_20 and data from the DANIEL_LEVKOVITZ_test_5 table. \n",
@@ -324,8 +323,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "134e991f",
+   "execution_count": 42,
+   "id": "18c77c93",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "c67f1cce",
+   "id": "31ec3465",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +343,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8c964d3",
+   "id": "95aff46e",
    "metadata": {},
    "source": [
     "#### Create JSON from the mentioned dataset and store it locally as first.json"
@@ -353,7 +352,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "a0a88631",
+   "id": "7c4449a8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,7 +361,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "80c7882d",
+   "id": "233b3b29",
    "metadata": {},
    "source": [
     "### Requirement 7 - Create a dataset that combines data from DANIEL_LEVKOVITZ__test_20 and data from the DANIEL_LEVKOVITZ_test_5 table.\n",
@@ -372,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "1e351c7b",
+   "id": "49ab34d5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,7 +381,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "d27036d3",
+   "id": "fc775e5c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,7 +390,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ff69dfd",
+   "id": "e0809c67",
    "metadata": {},
    "source": [
     "#### Create json from the mentioned dataset and store it locally as second.json"
@@ -400,7 +399,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "a040a956",
+   "id": "f05c4891",
    "metadata": {},
    "outputs": [],
    "source": [
